@@ -119,31 +119,7 @@ static char         binfname[PATH_MAX];	/* binary file name */
 int
 main(int argc, char *argv[], char *env[] __UNUSED__)
 {
-   char                argv0[PATH_MAX];
-   int                 i;
-
-   snprintf(argv0, sizeof(argv0), "%s", argv[0]);
-   /* Linux stores the name of the program in argv[0], but not the path.
-    * To adjust this, I store a string with the path in argv[0]. To do
-    * so, I try to get the current path with getcwd(), and if that fails
-    * I search for the PWD= setting in the environment.
-    */
-   if (getcwd(argv0, PATH_MAX))
-     {
-	i = strlen(argv0);
-	snprintf(argv0 + i, sizeof(argv0) - i, "/%s", argv[0]);
-     }
-   else
-     {
-	char               *pwd = getenv("PWD");
-
-	if (pwd)
-	   snprintf(argv0, sizeof(argv0), "%s/%s", pwd, argv[0]);
-     }				/* if */
-   argv[0] = argv0;		/* set location to new first parameter */
-
-   e_prefix_determine(argv0);
-
+   e_prefix_determine(argv[0]);
    return sc_compile(argc, argv);
 }
 
